<resources>
    <string name="welcome">Welcome</string>
    <string name="app_name">TrialAttemptOne</string>
    <string name="selectButton">Select</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="curTerm">Current Term Courses</string>
    <string name="upcomingAss">Upcoming Assessments</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="assess">Assessments</string>
    <string name="notes">Notes</string>
    <string name="createTerm">Create New Term</string>
    <string name="termTitle">Term Title: </string>
    <string name="startDate">Start Date: </string>
    <string name="endDate">End Date: </string>
    <string name="elipses">...</string>
    <string name="courseTitle">Course Title: </string>
    <string name="term">Term: </string>
    <string name="courseStatus">Status: </string>
    <string name="statusName">Status Title: </string>
    <string name="mentor">Mentor: </string>
    <string name="mentorInfo">Mentor Information: </string>
    <string name="mentorFirst">First Name: </string>
    <string name="mentorLast">Last Name: </string>
    <string name="phone">Phone: </string>
    <string name="eMail">Email: </string>
    <string name="add_assignmen">Add Assessment</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="shareNote">Share Note</string>
    <string name="edit_assessment">Edit</string>
    <string name="alerts">Alerts</string>
    <string name="aTitle">Title: </string>
    <string name="dueDate">Due Date: </string>
    <string name="okay">Okay</string>
    <string name="type">Type: </string>
    <string name="alertHour">Alert Hour: </string>
    <string name="editCourse">Edit Course</string>
    <string name="typeSomething">Type something</string>
    <string name="time">Time: </string>
    <string name="alertDate">Alert Date: </string>
    <string name="enabled">Enabled</string>
    <string name="setAlert">Set Alert</string>
</resources>
