<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssessmentAlertScreen">

    <android.support.v7.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/alertAssTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/alertAssDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/alertAssHourTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertHour"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/alertAssCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelAlertButtonPressed"
            android:text="@string/cancelButton"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="160dp"
            android:layout_height="48dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/alertAssSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveAlertButtonPressed"
            android:text="@string/saveButton"
            app:layout_column="1"
            app:layout_row="4" />

        <EditText
            android:id="@+id/alertAssTitleET"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="0" />

        <EditText
            android:id="@+id/alertAssDateET"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="1" />

        <EditText
            android:id="@+id/alertAssHourET"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0-23"
            android:inputType="number|textPersonName|phone"
            android:textAlignment="center"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/alertAssDateButton"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:onClick="dueDateButtonPressed"
            android:text="@string/elipses"
            app:layout_column="2"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/alertAssEnabledCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkBoxClicked"
            android:text="@string/enabled"
            app:layout_column="1"
            app:layout_row="3" />
    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>