<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAssignmentScreen">

    <android.support.v7.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/assTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="0" />

        <EditText
            android:id="@+id/assTitleET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/assDueDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="1" />

        <EditText
            android:id="@+id/assDueDateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/dueDateButton"
            android:layout_width="46dp"
            android:layout_height="38dp"
            android:onClick="assDueDateButtonPressed"
            android:text="@string/elipses"
            app:layout_column="2"
            app:layout_row="1" />

        <Space
            android:layout_width="96dp"
            android:layout_height="33dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/assCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelButtonPressed"
            android:text="@string/cancelButton"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/assSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveButtonPressed"
            android:text="@string/saveButton"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/assTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="2" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="206dp"
            android:layout_height="46dp"
            android:clickable="true"
            app:layout_column="1"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>