<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssessmentDetailsScreen">

    <android.support.v7.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/assessmentTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="0" />

        <EditText
            android:id="@+id/assessmentTiitleET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/assessmentDueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="1" />

        <EditText
            android:id="@+id/assessmentDueET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/assessmentDueDateButton"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:onClick="dueDateButtonPressed"
            android:text="@string/elipses"
            android:visibility="invisible"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="74dp"
            android:layout_height="47dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/okayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="okayButtonPressed"
            android:text="@string/okay"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/assessmentSaveChangesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveAssButtonPressed"
            android:text="@string/saveButton"
            android:visibility="invisible"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/detailsAssTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="2" />

        <Spinner
            android:id="@+id/detailTypeSpinner"
            android:layout_width="212dp"
            android:layout_height="46dp"
            android:clickable="false"
            app:layout_column="1"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>