<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursesScreen">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/statusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statusName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_column="0"
            app:layout_row="0" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            app:layout_column="0"
            app:layout_row="1" />

        <EditText
            android:id="@+id/statusET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/cancelStatusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelStatusButton"
            android:text="@string/cancelButton"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/saveStatusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveStatusButton"
            android:text="@string/saveButton"
            app:layout_column="1"
            app:layout_row="2" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>